added some stuff

--- a/maps_r/outputs/whatsaplace.html
+++ b/maps_r/outputs/whatsaplace.html
@@ -1493,14 +1493,25 @@ div.tocify {
 </div>
 
 
-<p>What is a coastal town? It sounds like a simple question to answer and probably one which conjours up specific place names in the mind of the reader: St Ives, Scarborough, Witby, Portree, Herne Bay, etc. Let us consider Herne Bay in Kent as an example as it serves to illustrate the hidden complexity underlying this seemingly simple question.</p>
-<p>Ordnance Survey maintains a list of place names in a product called “OS Open Names” <span class="citation">[<a href="#ref-OrdnanceSurvey2023" role="doc-biblioref">1</a>]</span> which is free to use.</p>
+<p>What is a coastal town? It sounds like a simple question to answer and probably one which brings to mind specific places: St Ives, Scarborough, Witby, Portree, Herne Bay, etc. But what can a place name tell us about a town? Let us consider Herne Bay in Kent as an example as it serves to illustrate the hidden complexity underlying this seemingly simple question.</p>
+<p>Ordnance Survey maintains a list of place names in a product called “OS Open Names” <span class="citation">[<a href="#ref-OrdnanceSurveyGB2023" role="doc-biblioref">1</a>]</span> which is free to use. The dataset is split into cities, towns, villages, hamlets, other settlements, and suburban areas. The technical specification for the product <span class="citation">[<a href="#ref-OrdnanceSurveyGB2023a" role="doc-biblioref">2</a>]</span> provides the following definition for town:</p>
+<blockquote>
+<p>A centre of business and population with an area in excess of 2.5 square kilometres. Some smaller places are also historically considered towns, for example, where they are market or former county towns.</p>
+</blockquote>
+<p>How the area is determined is not specified but page 4 of <span class="citation">[<a href="#ref-OrdnanceSurveyGB2023a" role="doc-biblioref">2</a>]</span> states:</p>
+<blockquote>
+<p>Settlements are sourced from an internal OS data store. For LocalType City and Town, the geometry supplied is the notional centre of the settlement (the position that the majority of informed people would accept as being the ‘centre’ of the settlement) and the position has been manually captured.</p>
+<p>For all other settlement types, the position has been generated from the major road junction within the settlement, using OS MasterMap Highways Network.</p>
+</blockquote>
 <p>But what can we really learn about a place solely from its name? Whatever is recorded in association with that name.</p>
 <div id="references" class="section level1 unnumbered" number>
 <h1>References</h1>
 <div id="refs" class="references">
-<div id="ref-OrdnanceSurvey2023">
-<p>[1] Ordnance Survey, “OS Open Names.” Jul. 2023. Available: <a href="https://osdatahub.os.uk/downloads/open/OpenNames">https://osdatahub.os.uk/downloads/open/OpenNames</a>. [Accessed: Sep. 06, 2023]</p>
+<div id="ref-OrdnanceSurveyGB2023">
+<p>[1] Ordnance Survey GB, “OS Open Names.” Jul. 2023. Available: <a href="https://osdatahub.os.uk/downloads/open/OpenNames">https://osdatahub.os.uk/downloads/open/OpenNames</a>. [Accessed: Sep. 06, 2023]</p>
+</div>
+<div id="ref-OrdnanceSurveyGB2023a">
+<p>[2] Ordnance Survey GB, “OS OPEN NAMES™ – TECHNICAL SPECIFICATION - V2.2.” Jan. 2023. Available: <a href="OS%20OPEN%20NAMES™%20–%20TECHNICAL%20SPECIFICATION">OS OPEN NAMES™ – TECHNICAL SPECIFICATION</a>. [Accessed: Sep. 11, 2023]</p>
 </div>
 </div>
 </div>
